src/main/java/com/example/demo/dto/errors/ErrorResponseDto.java
package com.example.demo.dto.errors;

public record ErrorResponseDto(
        String message
) {}
